Implement Movies list fragment.

--- a/library_base/src/main/res/layout/view_cell_dummy_item.xml
+++ b/library_base/src/main/res/layout/view_cell_dummy_item.xml
@@ -5,11 +5,11 @@
 
         <variable
             name="item"
-            type="com.anibalbastias.coolmovies.library.base.presentation.adapter.base.model.UiBaseItem" />
+            type="com.anibalbastias.coolmovies.library.base.ui.adapter.base.model.UiBaseItem" />
 
         <variable
             name="clickHandler"
-            type="com.anibalbastias.coolmovies.library.base.presentation.adapter.base.model.UiBaseItem" />
+            type="com.anibalbastias.coolmovies.library.base.ui.adapter.base.BaseBindClickHandler" />
 
     </data>
 
