--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
+    <style name="AppTheme" parent="@style/Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -9,6 +9,30 @@
 
         <item name="android:windowBackground">@color/shark</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ToolBarDetailsStyle" parent="Theme.AppCompat">
+        <item name="android:background">@color/transparent</item>
+        <item name="android:textColorPrimary">@color/textPrimaryColor</item>
+        <item name="android:textColorSecondary">@color/textPrimaryColor</item>
+        <item name="actionMenuTextColor">@color/textPrimaryColor</item>
+        <item name="colorControlHighlight">@color/circle2Color</item>
+        <item name="actionButtonStyle">@style/AppTheme.Widget.ActionButton</item>
+        <item name="colorControlNormal">@color/primaryColor</item>
+
+        <!-- ActionMode -->
+        <item name="actionModeBackground">@color/white</item>
+        <item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+        <item name="actionModeCloseButtonStyle">@style/closeButtonActionMode</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
+    <style name="AppTheme.Widget.ActionButton" parent="@style/Widget.AppCompat.ActionButton">
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="closeButtonActionMode" parent="Widget.AppCompat.Light.ActionButton.CloseMode">
+        <item name="android:tint">@color/primaryColor</item>
     </style>
 
 </resources>
