--- a/feature_movies/src/main/res/values/dimens.xml
+++ b/feature_movies/src/main/res/values/dimens.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="image_size">120dp</dimen>
+    <dimen name="dp_16">16dp</dimen>
+    <dimen name="dp_150">150dp</dimen>
+    <dimen name="dp_0">0dp</dimen>
+    <dimen name="dp_10">10dp</dimen>
+    <dimen name="sp_13">13sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
+    <dimen name="dp_220">220dp</dimen>
+    <dimen name="sp_14">14sp</dimen>
+    <dimen name="dp_5">5dp</dimen>
+    <dimen name="dp_45">45dp</dimen>
+    <dimen name="dp_8">8dp</dimen>
 </resources>
