Implement Movie Detail Fragment with Ui components

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,4 +35,10 @@
         <item name="android:tint">@color/primaryColor</item>
     </style>
 
+    <style name="ToolbarDetails" parent="ToolBarDetailsStyle">
+        <item name="android:tint">@color/white</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="android:fontFamily">@font/opensans_regular</item>
+    </style>
+
 </resources>
