--- a/feature_movies/src/main/res/values/dimens.xml
+++ b/feature_movies/src/main/res/values/dimens.xml
@@ -12,4 +12,12 @@
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_45">45dp</dimen>
     <dimen name="dp_8">8dp</dimen>
+    <dimen name="dp_72">72dp</dimen>
+    <dimen name="dp_100">100dp</dimen>
+    <dimen name="dp_300">300dp</dimen>
+    <dimen name="sp_26">26sp</dimen>
+    <dimen name="sp_20">20sp</dimen>
+    <dimen name="sp_18">18sp</dimen>
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_20">20dp</dimen>
 </resources>
