Hide tv series, favourites and profile modules for first release. TODO: Unit tests

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,16 @@
     <item
         android:id="@+id/featureTVSeriesNavGraph"
         android:title="@string/tv_series"
+        android:visible="false"
         android:icon="@drawable/ic_round_tv_series"/>
     <item
         android:id="@+id/featureFavouriteNavGraph"
         android:title="@string/favorites"
+        android:visible="false"
         android:icon="@drawable/ic_round_favorite"/>
     <item
         android:id="@+id/featureProfileNavGraph"
         android:title="@string/profile"
+        android:visible="false"
         android:icon="@drawable/ic_round_person"/>
 </menu>
