--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="android:windowBackground">@color/shark</item>
+        <item name="android:windowBackground">@drawable/splashscreen</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
