--- a/feature_movies/src/main/res/layout/fragment_movie_recommendation_item.xml
+++ b/feature_movies/src/main/res/layout/fragment_movie_recommendation_item.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="item"
-            type="com.anibalbastias.coolmovies.feature.movies.presentation.model.UiMovieItem" />
+            type="com.anibalbastias.coolmovies.feature.movies.presentation.model.details.recommendations.UiMovieRecommendationsResults" />
 
         <variable
             name="clickHandler"
@@ -18,11 +18,12 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvUserContainer"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_220"
+        android:layout_width="@dimen/dp_150"
+        android:layout_height="@dimen/dp_170"
         android:layout_marginStart="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_16"
         android:layout_marginEnd="@dimen/dp_16"
+        android:layout_marginBottom="@dimen/dp_16"
         android:background="@color/white"
         android:clickable="true"
         android:focusable="true"
@@ -40,7 +41,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ivUserImage"
                 android:layout_width="@dimen/dp_0"
-                android:layout_height="@dimen/dp_150"
+                android:layout_height="@dimen/dp_90"
                 android:contentDescription="@string/itemDescription"
                 android:scaleType="centerCrop"
                 android:transitionName="firstTransitionName"
