Fixes for internet error connection edge cases

--- a/feature_movies/src/main/res/layout/fragment_movie_list.xml
+++ b/feature_movies/src/main/res/layout/fragment_movie_list.xml
@@ -58,6 +58,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/space_medium"
+                android:fontFamily="@font/opensans_semibold"
+                android:textColor="@color/shark"
                 android:text="@string/data_not_found" />
 
         </LinearLayout>
